Changes done are:
* Fixed crash for empty field values
* Save button hides now if first name is not entered
* Clicking on a contact goes to the Modify/Delete activity

--- a/CustomPhonebook2/app/src/main/res/values/strings.xml
+++ b/CustomPhonebook2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CustomPhonebook</string>
+    <string name="app_name">Custom Contact Manager</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
