--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
 
     <string name="place_not_found">Sorry, no weather data found.</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="gps_toggle_text">Toggle to enable GPS use</string>
+    <string name="scale_choice">Choose the desired temperature scale</string>
 
 </resources>
