--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
 
     <string name="settings">Settings</string>
     <string name="about">About</string>
+    <string name="refresh">Refresh</string>
 
     <string name="place_not_found">Sorry, no weather data found.</string>
     <string name="title_activity_settings">Settings</string>
