--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -23,5 +23,8 @@
     <string name="title_activity_settings">Settings</string>
     <string name="gps_toggle_text">Toggle to enable GPS use</string>
     <string name="scale_choice">Choose the desired temperature scale</string>
+    <string name="title_location_permission">Location permission</string>
+    <string name="text_location_permission">Location permission required</string>
+    <string name="ok">OK</string>
 
 </resources>
