--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -21,12 +21,14 @@
 
     <string name="place_not_found">Sorry, no weather data found.</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="gps_toggle_text">Toggle to enable GPS use</string>
     <string name="scale_choice">Choose the desired temperature scale</string>
     <string name="choose_city">Select a city</string>
     <string name="search_box">Enter a city</string>
     <string name="recent_places">Recent locations</string>
     <string name="city_chosen">City</string>
     <string name="set">SET</string>
+    <string name="or">OR</string>
+    <string name="gps_button">Use GPS</string>
+    <string name="done">Done</string>
 
 </resources>
