Final touches before submission:
* Added an About activity
* Added comments and documentation
* Changed location layout to a more minimal design

--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="or">OR</string>
     <string name="gps_button">Use GPS</string>
     <string name="done">Done</string>
+    <string name="string_about">Simple Weather App designed by Gunjan Tomer v3.4 Dec 4th, 2017</string>
 
 </resources>
